# Head

- Fix a bug in range checking in the C version of the LARGE function
- Fix bug in keeping of table references when setting to keep all named references
- Experiment with ways of making it easier to wrap the C output in a command line interface
- Added the NOT(true) function in ruby, and C
- Update dependencies
- Refactor common command line options

# 0.3.17 - 2015 May 14

- Fix a bug when simplifying SUM("Not a number") and the like

# 0.3.16 - 2015 May 12

- Be more permissive of newlines in strings and formulae
- Raise an Exception if fail to parse a formulae
- Generated ruby tests now ignore differences in newlines in strings
- Implemented the ADDRESS function in Ruby
- PMT now excepts 4 or 5 arguments in the ruby and C versions (though only the default zero arguments are supported)

# 0.3.15 - 2015 March 10

- Fixed a bug in VLOOKUP when the lookup value is an empty cell

# 0.3.14 - 2015 March 10

- Fixed bug in ruby version of power
- Now detects and reports more kinds of external references
- Improved the way that the conversion treats newlines and other special characters in strings by dealing with excel unicode escaping of the form _x000D_
- Added missing NUM conversion to ruby interface to C version
- Fixed PMT to return NUM error when number of periods is zero

# 0.3.13 - 2015 March 2

- Roots of negative numbers now return an error, like excel
- Fixed a bug when specifying :all cells in a sheet to be settable, and empty cells on that sheet are referenced

# 0.3.12 - 2015 February 27

- Fixed a bug which meant that COLUMN and ROW and OFFSET functions would sometimes not be correctly replaced
- Tinkered with tests

# 0.3.11 - 2015 February 6

- Implemented the CHAR function in C and Ruby
- Default logging now uses colours to indicate severity

# 0.3.10 - 2015 January 16

- Fix unitialzed constant error

# 0.3.9 - 2015 January 15

- Fix SUBTOTAL to not count other SUBTOTALs